--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.19.2",
-    "googleapis": "^134.0.0"
+    "googleapis": "^134.0.0",
+    "ytdl": "^1.4.1"
   }
 }
