--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "chetan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
     "googleapis": "^134.0.0",
